# ai_trade

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ai_trading_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/: __init__.py  main.py
app/analysis/: quick_report.py
app/core/: config.py  logging.py  paths.py  watchlist.py
app/dashboard/: analyze_actions.py  charts.py  streamlit_app.py
app/data/: __init__.py
app/data/providers/: base.py  yfinance_provider.py
app/db/: duckdb_client.py  schema.sql
app/features/: basic_features.py  technical_indicators.py
app/llm/: ollama_client.py
app/services/: indicators.py  ingestion.py
app/tools/: __init__.py  duckdb_context.py
config/: watchlist.txt
documentation/: architecture.md  command-reference.md  dashboard-guide.md  data-pipeline.md  feature-engineering.md  gemma-ollama.md  glossary.md  index.md  indicators.md  operations-runbook.md  project-overview.md  roadmap.md  setup-guide.md  testing-quality.md  troubleshooting.md
scripts/: start_project.ps1  start_project.sh  status_project.ps1  status_project.sh  stop_project.ps1  stop_project.sh
tests/: test_analyze_refresh.py  test_config.py  test_control_scripts.py  test_dashboard_candlestick.py  test_documentation.py  test_duckdb_gemma_context.py  test_indicators_table.py  test_ingestion.py  test_ollama_client.py  test_quick_report_features.py  test_schema.py  test_technical_indicators.py  test_watchlist.py
