[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-platform"
version = "0.1.0"
description = "Local AI trading research platform using Gemma and XGBoost"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "streamlit>=1.35",
    "ta>=0.11",
    "tenacity>=8.2",
    "typer>=0.12",
    "xgboost>=2.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
trading-platform = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
